add test client